// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PageProposals shows a message if still loading 1`] = `
<tmpage-stub
  class="proposals"
  data-title="Proposals"
  emptysubtitle=""
  emptytitle="No data"
  loaderpath=""
  loading="true"
>
  <div
    class="overview-header"
  >
    <!---->
     
    <div
      class="data-row"
    >
      <div>
        <h4>
          Community Pool
        </h4>
         
        <p>
          
          0 ATOM
        
        </p>
      </div>
       
      <div>
        <h4>
          Total Staked
        </h4>
         
        <p>
          
          0
          ATOM
        
        </p>
      </div>
       
      <!---->
    </div>
  </div>
   
  <modalpropose-stub
    denom="ATOM"
  />
   
  <h4>
    Proposals
  </h4>
   
  <liproposal-stub
    proposal="[object Object]"
  />
  <liproposal-stub
    proposal="[object Object]"
  />
  <liproposal-stub
    proposal="[object Object]"
  />
  <liproposal-stub
    proposal="[object Object]"
  />
  <liproposal-stub
    proposal="[object Object]"
  />
  <liproposal-stub
    proposal="[object Object]"
  />
  <liproposal-stub
    proposal="[object Object]"
  />
  <liproposal-stub
    proposal="[object Object]"
  />
  <liproposal-stub
    proposal="[object Object]"
  />
  <liproposal-stub
    proposal="[object Object]"
  />
  <liproposal-stub
    proposal="[object Object]"
  />
  <liproposal-stub
    proposal="[object Object]"
  />
  <liproposal-stub
    proposal="[object Object]"
  />
  <liproposal-stub
    proposal="[object Object]"
  />
  <liproposal-stub
    proposal="[object Object]"
  />
  <liproposal-stub
    proposal="[object Object]"
  />
  <liproposal-stub
    proposal="[object Object]"
  />
   
  <participantlist-stub
    participants="[object Object],[object Object]"
    title="Top Voters"
  />
   
  <!---->
   
  <!---->
</tmpage-stub>
`;

exports[`PageProposals shows a message if there is nothing to display 1`] = `
<tmpage-stub
  class="proposals"
  data-title="Proposals"
  emptysubtitle=""
  emptytitle="No data"
  loaderpath=""
  loading="true"
>
  <div
    class="overview-header"
  >
    <!---->
     
    <div
      class="data-row"
    >
      <div>
        <h4>
          Community Pool
        </h4>
         
        <p>
          
          0 ATOM
        
        </p>
      </div>
       
      <div>
        <h4>
          Total Staked
        </h4>
         
        <p>
          
          0
          ATOM
        
        </p>
      </div>
       
      <!---->
    </div>
  </div>
   
  <modalpropose-stub
    denom="ATOM"
  />
   
  <div>
    <div>
      <tmdatamsg-stub
        icon="gavel"
        iconcolor="var(--warning)"
      >
        <div>
          No Governance Proposals
        </div>
         
        <div>
          
          There are currently no governance proposals to display.
          Click the
          'Create Proposal' button to submit the first network proposal!
        
        </div>
      </tmdatamsg-stub>
    </div>
  </div>
   
  <participantlist-stub
    participants="[object Object],[object Object]"
    title="Top Voters"
  />
   
  <!---->
   
  <!---->
</tmpage-stub>
`;

exports[`PageProposals shows a proposals table 1`] = `
<tmpage-stub
  class="proposals"
  data-title="Proposals"
  emptysubtitle=""
  emptytitle="No data"
  loaderpath=""
  loading="true"
>
  <div
    class="overview-header"
  >
    <!---->
     
    <div
      class="data-row"
    >
      <div>
        <h4>
          Community Pool
        </h4>
         
        <p>
          
          0 ATOM
        
        </p>
      </div>
       
      <div>
        <h4>
          Total Staked
        </h4>
         
        <p>
          
          0
          ATOM
        
        </p>
      </div>
       
      <!---->
    </div>
  </div>
   
  <modalpropose-stub
    denom="ATOM"
  />
   
  <h4>
    Proposals
  </h4>
   
  <liproposal-stub
    proposal="[object Object]"
  />
  <liproposal-stub
    proposal="[object Object]"
  />
  <liproposal-stub
    proposal="[object Object]"
  />
  <liproposal-stub
    proposal="[object Object]"
  />
  <liproposal-stub
    proposal="[object Object]"
  />
  <liproposal-stub
    proposal="[object Object]"
  />
  <liproposal-stub
    proposal="[object Object]"
  />
  <liproposal-stub
    proposal="[object Object]"
  />
  <liproposal-stub
    proposal="[object Object]"
  />
  <liproposal-stub
    proposal="[object Object]"
  />
  <liproposal-stub
    proposal="[object Object]"
  />
  <liproposal-stub
    proposal="[object Object]"
  />
  <liproposal-stub
    proposal="[object Object]"
  />
  <liproposal-stub
    proposal="[object Object]"
  />
  <liproposal-stub
    proposal="[object Object]"
  />
  <liproposal-stub
    proposal="[object Object]"
  />
  <liproposal-stub
    proposal="[object Object]"
  />
   
  <participantlist-stub
    participants="[object Object],[object Object]"
    title="Top Voters"
  />
   
  <!---->
   
  <!---->
</tmpage-stub>
`;
